err
In file included from zild_chess.c:6:0:
tablero.h:16:16: error: redefinition of ‘struct movimiento_type’
 typedef struct movimiento_type {
                ^~~~~~~~~~~~~~~
In file included from zild_chess.c:5:0:
movimiento.h:4:16: note: originally defined here
 typedef struct movimiento_type {
                ^~~~~~~~~~~~~~~
In file included from zild_chess.c:6:0:
tablero.h:23:3: error: conflicting types for ‘movimiento_t’
 } movimiento_t;
   ^~~~~~~~~~~~
In file included from zild_chess.c:5:0:
movimiento.h:11:3: note: previous declaration of ‘movimiento_t’ was here
 } movimiento_t;
   ^~~~~~~~~~~~
In file included from zild_chess.c:6:0:
tablero.h: In function ‘init_pieza’:
tablero.h:54:19: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
    p->movimientos = movimientos_peon;
                   ^
tablero.h:60:19: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
    p->movimientos = movimientos_torre;
                   ^
tablero.h:66:19: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
    p->movimientos = movimientos_caballo;
                   ^
tablero.h:71:19: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
    p->movimientos = movimientos_alfil;
                   ^
tablero.h:77:19: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
    p->movimientos = movimientos_rey;
                   ^
tablero.h:82:19: warning: assignment from incompatible pointer type [-Wincompatible-pointer-types]
    p->movimientos = movimientos_reina;
                   ^
